--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -1,8 +1,28 @@
 <nav class="navbar">
-    <button class="btn btn-primary" (click)="languageSelected('en')">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            LOGO
+            <!-- wpierdolić tu logo -->
+        </a>
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Nav1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Nav2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Nav3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Nav4</a>
+            </li>
+        </ul>
+    </div>
+    <!-- <button class="btn btn-primary" (click)="languageSelected('en')">
         ENG
     </button>
     <button class="btn btn-primary" (click)="languageSelected('de')">
         CH
-    </button>
+    </button> -->
 </nav>
