--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
@@ -2,7 +2,7 @@
 
 .navbar {
     padding: 0;
-    background-color: red;
+    background-color: gray;
 
     .navbar-nav {
         flex-direction: row;
