app component edit

--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -21,7 +21,7 @@
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                {{ 'COMMON.SELECT_LANGUAGE' | translate}}
+                {{ 'COMMON.LANGUAGE' | translate}}
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="#" (click)="languageSelected('en')">English</a></li>
