Added font awesome, footer and basic structure of the contact components

--- a/src/app/core/pages/contact/contact.component.html
+++ b/src/app/core/pages/contact/contact.component.html
@@ -1,1 +1,22 @@
-<p>Add contact details -> mobile phone, </p>
+<div class="container">
+    <div class="container dir-column">
+        <!--Logo to dissappear on mobile-->
+        <div class="logo">
+            <img class="logo" src="../../../../assets/images/MontanaLogo.png" alt="">
+        </div>
+        <!--Photo to be visible on mobile-->
+        <div class="image">
+            <img class="main-image" src="../../../../assets/images/creamingAsianWoman.PNG" alt="">
+        </div>
+    </div>
+    <div class="container dir-column">
+        <div class="header">
+            <h1>{{ 'CONTACT.HEADER' | translate}}</h1>
+        </div>
+        <div class="contact">
+            <p>Telephone</p>
+            <p>Email</p>
+            <p>Social Media</p>
+        </div>
+    </div>
+</div>
