--- a/src/app/core/pages/footer/footer.component.html
+++ b/src/app/core/pages/footer/footer.component.html
@@ -1,1 +1,23 @@
-<p>footer works!</p>
+<div class="container">
+    <div class="signature">
+        <span>{{ 'FOOTER.SIGNATURE' | translate}}</span>
+    </div>
+    <div class="social-media">
+        <ul>
+            <li>
+                <span>
+                    <a href="https://www.instagram.com/montanaphibrows/" target="_blank">
+                        <fa-icon [icon]="['fab', 'instagram']" size="2x"></fa-icon>
+                    </a>
+                </span>
+            </li>
+            <li>
+                <span>
+                    <a href="https://maps.app.goo.gl/62QbbnRBgbya1AHb6" target="_blank">
+                        <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
+                    </a>
+                </span>
+            </li>
+        </ul>
+    </div>
+</div>
