--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
 <app-services></app-services>
 <app-reviews></app-reviews>
 <app-contact></app-contact>
+<app-footer></app-footer>
+
+
 
 <!-- <div class="row">
     <div>
