--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
@@ -1,20 +1,28 @@
 @import '../../../../../assets/styles/global';
 
+$navHoverBg: $colourA;
+$navHoverLine: $colourB;
+$navBg: white;
+$navFont: black;
+
 .navbar {
     padding: 0;
-    background-color: gray;
+    background-color: $navBg;
+    color: $navFont;
 
     .navbar-nav {
         flex-direction: row;
 
+        // Navbar items
         .nav-item {
-            font-size: 1.5rem;
+            font-size: 1rem;
             overflow: hidden;
             position: relative;
             transition: background-color 500ms;
 
             .nav-link {
                 padding-inline: 2rem;
+                color: inherit;
             }
         }
 
@@ -25,7 +33,7 @@
             bottom: 0;
             height: 5px;
             width: 110%;
-            background-color: yellow;
+            background-color: $navHoverLine;
             scale: 0 1;
             transition:
                 scale 250ms,
@@ -47,8 +55,64 @@
         }
 
         .nav-item:hover {
-            background-color: rgb(202, 73, 73);
+            background-color: $navHoverBg;
+        }
+    }
+
+    // Navbar dropdow for language select
+    .dropdown {
+        margin-left: 2rem;
+        transition: background-color 500ms;
+
+        .dropdown-toggle {
+            padding: 8px 16px;
         }
 
+        .dropdown-toggle.show {
+            background-color: $navHoverLine;
+        }
+
+        .dropdown-toggle::after {
+            transform: rotate(0);
+            transition: transform 200ms;
+        }
+
+        .dropdown-toggle.show::after {
+            transform: rotate(180deg);
+            transition: transform 200ms;
+        }
+
+        .dropdown-menu {
+            display: inherit;
+            min-width: 100%;
+            padding: 0;
+            margin: 0;
+            border-radius: 0;
+            border: none;
+            transform: scaleY(0);
+            transform-origin: top;
+            transition: transform 200ms;
+            background-color: $navHoverLine;
+
+            .dropdown-item {
+                background-color: $navHoverLine;
+                transition: all 200ms;
+            }
+
+            .dropdown-item:hover {
+                background-color: $navBg;
+            }
+        }
+
+        .dropdown-menu.show {
+            display: inherit;
+            top: 90%;
+            transform: scaleY(1);
+        }
+    }
+
+    .dropdown:hover {
+        cursor: pointer;
+        background-color: $navHoverLine;
     }
 }
