--- a/src/app/core/pages/navbar/navbar.component.html
+++ b/src/app/core/pages/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<div class="d-none d-sm-block">
+<div class="d-none d-md-block">
     <app-navbar-desktop></app-navbar-desktop>
 </div>
-<div class="d-block d-sm-none">
+<div class="d-block d-md-none">
     <app-navbar-mobile></app-navbar-mobile>
 </div>
