Added logic to display only available languages

--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
@@ -97,6 +97,7 @@ $navFont: black;
             .dropdown-item {
                 background-color: $navHoverLine;
                 transition: all 200ms;
+                text-transform: uppercase;
             }
 
             .dropdown-item:hover {
