--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -19,13 +19,13 @@
             </li>
         </ul>
         <div class="dropdown">
-            <div class="dropdown-toggle" id="dropdownLanguage"
-                data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="dropdown-toggle" id="dropdownLanguage" data-bs-toggle="dropdown" aria-expanded="false">
                 {{ 'COMMON.LANGUAGE' | translate}}
-        </div>
-            <ul class="dropdown-menu" aria-labelledby="dropdownLanguage">
-                <li><a class="dropdown-item" href="#" (click)="languageSelected('en')">EN</a></li>
-                <li><a class="dropdown-item" href="#" (click)="languageSelected('de')">DE</a></li>
+            </div>
+            <ul class="dropdown-menu" *ngFor="let language of availableLanguages" aria-labelledby="dropdownLanguage">
+                <li>
+                    <a class="dropdown-item" href="#" (click)="languageSelected(language.value)">{{language.value}}</a>
+                </li>
             </ul>
         </div>
     </div>
