--- a/src/app/core/pages/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/core/pages/navbar/navbar-mobile/navbar-mobile.component.html
@@ -13,9 +13,10 @@
             <div class="dropdown-toggle" id="dropdownLanguage" data-bs-toggle="dropdown" aria-expanded="false">
                 {{ 'COMMON.LANGUAGE' | translate}}
             </div>
-            <ul class="dropdown-menu" aria-labelledby="dropdownLanguage">
-                <li><a class="dropdown-item" href="#" (click)="languageSelected('en')">EN</a></li>
-                <li><a class="dropdown-item" href="#" (click)="languageSelected('de')">DE</a></li>
+            <ul class="dropdown-menu" *ngFor="let language of availableLanguages" aria-labelledby="dropdownLanguage">
+                <li>
+                    <a class="dropdown-item" href="#" (click)="languageSelected(language.value)">{{language.value}}</a>
+                </li>
             </ul>
         </div>
         <ul class="navbar-nav" [class.is-open]="isMenuOpen">
