--- a/src/app/core/pages/welcome/welcome.component.html
+++ b/src/app/core/pages/welcome/welcome.component.html
@@ -1,3 +1,19 @@
-<p>Photo of happy lady, logo and button redirecting to booking platform</p>
+<section class="welcome">
+    <div class="container">
+        <div class="welcome-left">
+            <div class="logo">
+                <img src="../../../../assets/images/MontanaLogo.png" alt="">
+            </div>
+            
+            <div class="text">
+                            <h1>A UNIQUE<br>APPROACH<br>TO SKIN CARE</h1>
+            <p>Science-based skin care that's tailored to you</p>
+            </div>
 
-{{ 'COMMON.WELCOME_MESSAGE' | translate}}
+        </div>
+        <div class="welcome-right">
+            <img src="../../../../assets/images/smilingAsianWoman.PNG"  alt="">
+        </div>
+
+    </div>
+</section>
