--- a/src/app/core/pages/welcome/welcome.component.html
+++ b/src/app/core/pages/welcome/welcome.component.html
@@ -1,19 +1,24 @@
 <section class="welcome">
     <div class="container">
-        <div class="welcome-left">
-            <div class="logo">
-                <img src="../../../../assets/images/MontanaLogo.png" alt="">
+        <div class="row">
+            <div class="col-md-6 col-12">
+                <div class="row h-100">
+                    <div class="col-lg-6 col-md-8 col-4 pb-3 d-flex align-items-center">
+                        <img class="logo" src="../../../../assets/images/MontanaLogo.png" alt="">
+                    </div>
+                    <div class="col-md-12 col-8">
+                        <div class="col pb-3">
+                            <h1 class="title m-0">A UNIQUE<br>APPROACH<br>TO SKIN CARE</h1>
+                        </div>
+                        <div class="col">
+                            <h3 class="text m-0">Science-based skin care that's tailored to you</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
-            
-            <div class="text">
-                            <h1>A UNIQUE<br>APPROACH<br>TO SKIN CARE</h1>
-            <p>Science-based skin care that's tailored to you</p>
+            <div class="col-md-6 col-12 d-flex align-items-center">
+                <img class="photo pt-3 pt-md-0" src="../../../../assets/images/smilingAsianWoman.PNG" alt="">
             </div>
-
         </div>
-        <div class="welcome-right">
-            <img src="../../../../assets/images/smilingAsianWoman.PNG"  alt="">
-        </div>
-
     </div>
 </section>
