--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -7,6 +7,7 @@ body {
     min-height: 100vh;
     background-color: $colourA;
     font-family: $fontNormal;
+    color: $fontColor;
 
     ::-webkit-scrollbar {
         width: 20px;
