Added contact styling and carousel photos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <app-welcome></app-welcome>
-<app-story></app-story>
+<!-- <app-story></app-story>
 <app-services></app-services>
-<app-reviews></app-reviews>
+<app-reviews></app-reviews> -->
 <app-contact></app-contact>
 <app-footer></app-footer>
 
