--- a/src/app/core/pages/contact/contact.component.html
+++ b/src/app/core/pages/contact/contact.component.html
@@ -1,47 +1,36 @@
-<!-- <div class="container">
-    <div class="row">
-        <div class="logo">
-            <img class="logo" src="../../../../assets/images/MontanaLogo.png" alt="">
-        </div>
-        <div class="header">
-            <h1>{{ 'CONTACT.HEADER' | translate}}</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="image">
-            <img class="main-image" src="../../../../assets/images/creamingAsianWoman.PNG" alt="">
-        </div>
-        <div class="contact">
-            <p>Telephone</p>
-            <p>Email</p>
-            <p>Social Media</p>
-        </div>
-    </div>
-</div> -->
-
-<div class="container top">
-    <div class="row">
-        <div class="child col-md d-none d-md-block">
-            <span class="logo">
-                Logo
-            </span>
-        </div>
-        <div class="child col-md">
-            <span class="header">
-                {{ 'CONTACT.HEADER' | translate}}
-            </span>
-        </div>
-    </div>
-</div>
-<div class="container bottom">
-    <div class="row">
-        <div class="col-md">
-            Photo
-        </div>
-        <div class="contact col-md">
-            <span>Telephone :</span>
-            <span>Email: </span>
-            <span>Social Media:</span>
+<section class="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="row h-100 pb-3">
+                    <div class="col-lg-3 col-md-4 col-4 pb-3 d-flex align-items-center">
+                        <img class="logo" src="../../../../assets/images/MontanaLogo.png" alt="">
+                    </div>
+                    <div class="col-lg-9 col-md-8 col-8 pb-3 d-flex align-items-center">
+                        <div class="col pb-3">
+                            <h1 class="title m-0">{{'CONTACT.HEADER' | translate}}</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="row h-100 pt-3">
+                    <div class="col-md-6 col-12 d-flex align-items-center pb-3">
+                        <img class="photo" src="../../../../assets/images/creamingAsianWoman.PNG" alt="">
+                    </div>
+                    <div class="col-md-6 col-12 d-flex flex-column">
+                        <div class="col d-flex align-items-center pb-3">
+                            <h4 class="text m-0">Telephone: </h4>
+                        </div>
+                        <div class="col d-flex align-items-center pb-3">
+                            <h4 class="text m-0">Email: </h4>
+                        </div>
+                        <div class="col d-flex align-items-center pb-3">
+                            <h4 class="text m-0">Twoja Stara:</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</section>
