Added basic review component structure

--- a/src/app/core/pages/contact/contact.component.html
+++ b/src/app/core/pages/contact/contact.component.html
@@ -20,13 +20,10 @@
                     </div>
                     <div class="col-md-6 col-12 d-flex flex-column">
                         <div class="col d-flex align-items-center pb-3">
-                            <h4 class="text m-0">Telephone: </h4>
+                            <h4 class="text m-0">Telephone: Telephone Placeholder</h4>
                         </div>
                         <div class="col d-flex align-items-center pb-3">
-                            <h4 class="text m-0">Email: </h4>
-                        </div>
-                        <div class="col d-flex align-items-center pb-3">
-                            <h4 class="text m-0">Twoja Stara:</h4>
+                            <h4 class="text m-0">Email: Email Placeholder</h4>
                         </div>
                     </div>
                 </div>
