--- a/src/app/core/pages/welcome/welcome.component.scss
+++ b/src/app/core/pages/welcome/welcome.component.scss
@@ -20,6 +20,9 @@ $bg: $colourA;
 }
 
 .gallery {
+    background-color: $colourB;
+    padding: 2rem 0;
+
     .slider {
         scrollbar-width: none;
         position: relative;
@@ -35,34 +38,51 @@ $bg: $colourA;
             overflow-x: auto;
 
             img {
-                width: 250px;
+                border-radius: 25px;
+                height: 50vh;
+            }
+
+            @media (max-width: 768px) {
+                img {
+                    height: auto;
+                    width: 100%;
+                }
             }
         }
 
-        .slider-control{
+        .slider-control {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            height: 50px;
-            width: 50px;
-            background-color: black;
+            height: 40px;
+            width: 40px;
+            background-color: $colourA;
             display: flex;
             align-items: center;
             justify-content: center;
+            border-radius: 50%;
+            opacity: 0.5;
+            transition: opacity 200ms;
         }
 
-        #prev-slide{
-            left: -50px;
+        .slider-control:hover {
+            opacity: 1;
+            cursor: pointer;
         }
-        #next-slide{
-            right: -50px;
+
+        #prev-slide {
+            left: -20px;
+        }
+
+        #next-slide {
+            right: -20px;
         }
     }
 
     .slider-scroll {
-        height: 20px;
+        margin-top: 1rem;
+        height: 10px;
         width: 100%;
-        background-color: red;
         display: flex;
         align-items: center;
 
@@ -71,13 +91,20 @@ $bg: $colourA;
             position: relative;
             height: 5px;
             width: 100%;
-            background-color: blue;
+            background-color: $colourA;
+            border-radius: 10px;
 
-            .thumb{
+            .thumb {
                 position: absolute;
                 height: 100%;
-                width: 50%;
-                background-color: yellow;
+                width: 33%;
+                background-color: $fontColor;
+                border-radius: 10px;
+                cursor: grab;
+            }
+
+            .thumb:active {
+                cursor: grabbing;
             }
         }
     }
