navbar loggo add

--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -1,8 +1,7 @@
-<nav class="navbar">
+<nav class="navbar fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">
-            LOGO
-            <!-- wpierdolić tu logo -->
+            <img src="../../../../../assets/images/Montana Logo icon png file.png" alt="">
         </a>
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
