--- a/src/app/core/pages/welcome/welcome.component.scss
+++ b/src/app/core/pages/welcome/welcome.component.scss
@@ -1,11 +1,7 @@
 @import '../../../../assets/styles/global';
 
-// Te zmienne potem do globala jak beda odpowiednie kolory 
-
-$bg: $colourA;
-
 .welcome {
-    background-color: $bg;
+    background-color: $colourA;
     padding: 2rem 0;
     margin-top: 40px;
 
@@ -17,69 +13,5 @@ $bg: $colourA;
     .photo {
         border-bottom-left-radius: 50%;
         border-bottom-right-radius: 50%;
-    }
-}
-
-.gallery {
-    .slider {
-        scrollbar-width: none;
-        position: relative;
-
-        ::-webkit-scrollbar {
-            display: none;
-        }
-
-        .images {
-            display: flex;
-            flex-direction: row;
-            gap: 2rem;
-            overflow-x: auto;
-
-            img {
-                width: 250px;
-            }
-        }
-
-        .slider-control{
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            height: 50px;
-            width: 50px;
-            background-color: black;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #prev-slide{
-            left: -50px;
-        }
-        #next-slide{
-            right: -50px;
-        }
-    }
-
-    .slider-scroll {
-        height: 20px;
-        width: 100%;
-        background-color: red;
-        display: flex;
-        align-items: center;
-
-
-        .track {
-            position: relative;
-            height: 5px;
-            width: 100%;
-            background-color: blue;
-
-            .thumb{
-                position: absolute;
-                height: 100%;
-                width: 50%;
-                background-color: yellow;
-            }
-        }
     }
 }
