navbar styles refactor

--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top">
+<nav class="navbar fixed-top d-none d-md-block">
     <div class="container">
         <a class="navbar-brand" href="#">
             <img src="../../../../../assets/images/Montana Logo icon png file.png" alt="">
