--- a/src/app/core/pages/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/core/pages/navbar/navbar-mobile/navbar-mobile.component.html
@@ -1,8 +1,7 @@
-<nav class="navbar" #nav>
+<nav class="navbar fixed-top d-block d-md-none">
     <div class="container">
         <a class="navbar-brand me-auto" href="#">
-            LOGO
-            <!-- wpierdolić tu logo -->
+            <img src="../../../../../assets/images/Montana Logo icon png file.png" alt="">
         </a>
         <div class="hamburger-menu" [class.is-open]="isMenuOpen" (click)="toggleMenu()">
             <span></span>
