--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../assets/styles/global';
+@import '../navbar.component.scss';
 
 $navHoverBg: $colourA;
 $navHoverLine: $colourB;
@@ -6,21 +7,6 @@ $navBg: white;
 $navFont: black;
 
 .navbar {
-    padding: 0;
-    background-color: $navBg;
-    color: $navFont;
-
-    .navbar-brand {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 40px;
-
-        img {
-            height: 100%;
-        }
-    }
-
     .navbar-nav {
         flex-direction: row;
 
@@ -68,63 +54,5 @@ $navFont: black;
         .nav-item:hover {
             background-color: $navHoverBg;
         }
-    }
-
-    // Navbar dropdow for language select
-    .dropdown {
-        margin-left: 2rem;
-        transition: background-color 500ms;
-
-        .dropdown-toggle {
-            padding: 8px 16px;
-        }
-
-        .dropdown-toggle.show {
-            background-color: $navHoverLine;
-        }
-
-        .dropdown-toggle::after {
-            transform: rotate(0);
-            transition: transform 200ms;
-        }
-
-        .dropdown-toggle.show::after {
-            transform: rotate(180deg);
-            transition: transform 200ms;
-        }
-
-        .dropdown-menu {
-            display: inherit;
-            min-width: 100%;
-            padding: 0;
-            margin: 0;
-            border-radius: 0;
-            border: none;
-            transform: scaleY(0);
-            transform-origin: top;
-            transition: transform 200ms;
-            background-color: $navHoverLine;
-
-            .dropdown-item {
-                background-color: $navHoverLine;
-                transition: all 200ms;
-                text-transform: uppercase;
-            }
-
-            .dropdown-item:hover {
-                background-color: $navBg;
-            }
-        }
-
-        .dropdown-menu.show {
-            display: inherit;
-            top: 90%;
-            transform: scaleY(1);
-        }
-    }
-
-    .dropdown:hover {
-        cursor: pointer;
-        background-color: $navHoverLine;
     }
 }
