--- a/src/app/core/pages/gallery/gallery.component.scss
+++ b/src/app/core/pages/gallery/gallery.component.scss
@@ -110,6 +110,7 @@
         @media (max-width: 991.98px) {
             img {
                 width: calc((100% / 2) - 1rem);
+                margin-left: 2rem;
             }
         }
 
