--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar fixed-top d-none d-md-block">
-    <div class="container">
+    <div class="container h-100">
         <a class="navbar-brand" href="#">
             <img src="../../../../../assets/images/Montana Logo icon png file.png" alt="">
         </a>
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav ms-auto h-100">
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Nav1</a>
             </li>
