--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.scss
@@ -13,6 +13,8 @@ $navFont: black;
         // Navbar items
         .nav-item {
             font-size: 1rem;
+            display: flex;
+            align-items: center;
             overflow: hidden;
             position: relative;
             transition: background-color 500ms;
