--- a/src/app/core/pages/welcome/welcome.component.scss
+++ b/src/app/core/pages/welcome/welcome.component.scss
@@ -3,7 +3,7 @@
 .welcome {
     background-color: $colourA;
     padding: 2rem 0;
-    margin-top: 40px;
+    margin-top: 4rem;
 
     .logo,
     .photo {
