--- a/src/app/core/pages/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/core/pages/navbar/navbar-mobile/navbar-mobile.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top d-block d-md-none">
-    <div class="container">
+    <div class="container h-100">
         <a class="navbar-brand me-auto" href="#">
             <img src="../../../../../assets/images/Montana Logo icon png file.png" alt="">
         </a>
