Added header to gallery component

--- a/src/app/core/pages/gallery/gallery.component.html
+++ b/src/app/core/pages/gallery/gallery.component.html
@@ -29,6 +29,15 @@
 
 <section class="galleryv2">
     <div class="container position-relative">
+        <div class="row pb-3">
+            <div class="row h-100">
+                <div class="d-flex align-items-center">
+                    <div>
+                        <h1 class="title m-0">{{'REVIEWS.HEADER' | translate}}</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="prev-slide" class="slider-control">
             <fa-icon [icon]="['fas', 'arrow-left']"></fa-icon>
         </div>
