--- a/src/app/core/pages/welcome/welcome.component.html
+++ b/src/app/core/pages/welcome/welcome.component.html
@@ -8,10 +8,12 @@
                     </div>
                     <div class="col-md-12 col-8">
                         <div class="col pb-3">
-                            <h1 class="title m-0">A UNIQUE<br>APPROACH<br>TO SKIN CARE</h1>
+                            <!--Add Translation-->
+                            <h1 class="title m-0">A UNIQUE<br>APPROACH<br>TO MICROBLADING</h1>
                         </div>
                         <div class="col">
-                            <h3 class="text m-0">Science-based skin care that's tailored to you</h3>
+                            <!--Add Translation-->
+                            <h3 class="text m-0">Amazing beauty experience that's tailored to you!</h3>
                         </div>
                     </div>
                 </div>
